# SBF-Api

./: .gitignore  Procfile  README.md  docker-compose.yml  dockerfile  list.py  makefile  pyproject.toml
app/: __init__.py  main.py  routes.py
app/core/: auth.py  config.py  first_access.py  views.py
app/db/: base.py  engine.py  models.py
app/modules/associations/: models.py
app/modules/products/: models.py  routes.py  schemas.py  services.py
app/modules/providers/: models.py  routes.py  schemas.py  services.py
app/modules/transactions/: models.py  routes.py  schemas.py  services.py
app/modules/transactions_products/: models.py
app/modules/users/: models.py  routes.py  schemas.py  services.py
app/utils/: exceptions.py  helpers.py  pagination.py
