[tool.poetry]
name = "sbf-api"
version = "0.1.0"
description = "SBF Estoque - Api"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.63.0"
pydantic = "^1.8.1"
SQLAlchemy = "^1.3.23"
uvicorn = "^0.13.4"
passlib = "^1.7.4"
alembic = "^1.5.5"
psycopg2-binary = "^2.8.6"
fastapi-login = "^1.5.3"
python-multipart = "^0.0.5"
email-validator = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
